# service/src/main/java/br/com/sw2you/realmeet/validator/RoomValidator.java
@@ -1,6 +1,7 @@
 package br.com.sw2you.realmeet.validator;
 
 import static br.com.sw2you.realmeet.validator.ValidatorConstants.DUPLICATE;
+import static br.com.sw2you.realmeet.validator.ValidatorConstants.ROOM_ID;
 import static br.com.sw2you.realmeet.validator.ValidatorConstants.ROOM_NAME;
 import static br.com.sw2you.realmeet.validator.ValidatorConstants.ROOM_NAME_MAX_LENGTH;
 import static br.com.sw2you.realmeet.validator.ValidatorConstants.ROOM_SEATS;
@@ -11,9 +12,12 @@ import static br.com.sw2you.realmeet.validator.ValidatorUtils.validateMaxLength;
 import static br.com.sw2you.realmeet.validator.ValidatorUtils.validateMaxValue;
 import static br.com.sw2you.realmeet.validator.ValidatorUtils.validateMinValue;
 import static br.com.sw2you.realmeet.validator.ValidatorUtils.validateRequired;
+import static java.util.Objects.isNull;
 
 import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
+import br.com.sw2you.realmeet.api.model.UpdateRoomDTO;
 import br.com.sw2you.realmeet.domain.repository.RoomRepository;
+import java.util.Objects;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -31,7 +35,21 @@ public class RoomValidator {
             validateName(createRoomDTO.getName(), validationErrors) &&
             validateSeats(createRoomDTO.getSeats(), validationErrors)
         ) {
-            validateNameDuplicate(createRoomDTO.getName(), validationErrors);
+            validateNameDuplicate(null, createRoomDTO.getName(), validationErrors);
+        }
+
+        throwOnError(validationErrors);
+    }
+
+    public void validate(Long roomId, UpdateRoomDTO updateRoomDTO) {
+        var validationErrors = new ValidationErrors();
+
+        if (
+            validateRequired(roomId, ROOM_ID, validationErrors) &&
+            validateName(updateRoomDTO.getName(), validationErrors) &&
+            validateSeats(updateRoomDTO.getSeats(), validationErrors)
+        ) {
+            validateNameDuplicate(roomId, updateRoomDTO.getName(), validationErrors);
         }
 
         throwOnError(validationErrors);
@@ -52,9 +70,15 @@ public class RoomValidator {
         );
     }
 
-    private void validateNameDuplicate(String name, ValidationErrors validationErrors) {
+    private void validateNameDuplicate(Long roomIdToExclude, String name, ValidationErrors validationErrors) {
         roomRepository
             .findByNameAndActive(name, true)
-            .ifPresent(__ -> validationErrors.add(ROOM_NAME, ROOM_NAME + DUPLICATE));
+            .ifPresent(
+                room -> {
+                    if (isNull(roomIdToExclude) || !Objects.equals(room.getId(), roomIdToExclude)) {
+                        validationErrors.add(ROOM_NAME, ROOM_NAME + DUPLICATE);
+                    }
+                }
+            );
     }
 }
